# scanlation_api

./: .gitignore  main.py  pyproject.toml  test.py
app/dependencies/: auth.py
app/dependencies/helpers/: auth.py  series.py
app/helpers/: auth.py
app/models/: db_tables.py  series.py  user.py
app/routers/: __init__.py  auth.py  series.py
hoarder/: __init__.py
hoarder/sources/: __init__.py  all_sources.py  funcs.py  matcher.py
