[project]
name = "new-sys"
version = "0.1.0"
description = "New Python Scanlation System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.10.1",
    "sqlmodel>=0.0.24",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
